Fix : Fix misaligned dates with weekdays
- Correct the issue where dates were not aligned with the correct weekdays

--- a/style.css
+++ b/style.css
@@ -2,25 +2,56 @@ body {
   height: 100vh;
   background-color: rgb(169, 194, 30);
 }
-.calendar {
+.container {
   background-color: white;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -70%);
+  transform: translate(-50%, -50%);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
   border-radius: 10px; /* 둥근 모서리 적용 */
   padding: 1% 5% 5% 5%;
 }
 
+.container h1 {
+  text-align: center;
+  font-size: 3em;
+  color: blueviolet;
+}
+
+.month {
+  text-align: center;
+  align-items: center;
+  padding: 10px;
+  background-color: blueviolet;
+  border-radius: 5px 5px 0 0;
+  color: aliceblue;
+}
+
+.month h2 {
+  font-size: 2em;
+}
+
 .weekdays {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.weekdays div{
   flex-wrap: nowrap; /* 줄바꿈 방지 */
+  width: calc(100% / 7); /* 7개의 열로 나누어 날짜 정렬 */
+  box-sizing: border-box;
+  text-align: center;
+  padding: 10px;
+
 }
 
 .dates {
   display: flex;
   flex-wrap: wrap;
+  color: aliceblue;
+  background-color: black;
+  border-radius: 0 0 5px 5px;
 }
 
 .date {
@@ -28,5 +59,5 @@ body {
   box-sizing: border-box;
   text-align: center;
   padding: 10px;
-  border: 1px solid #ccc;
+
 }
